Components/Layout/MainLayout.razor.css
.page {
    /*background-color: aqua;*/
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.top-row {
    /*background-color: yellow;*/
    height: 60px;
}

.middle-row {
    background-color: red;
    height: calc(70vh - 30px);
    display: flex;
}

.middle-row-left {
    background-color: deepskyblue;
    width: 60vw;
}

.middle-row-right {
    background-color: white;
    width: 40vw;
}

.bottom-row {
    background-color: green;
    height: calc(30vh - 30px);
}

